UPDATE: Layout - Front

--- a/src/main/resources/templates/front/layout/master.html
+++ b/src/main/resources/templates/front/layout/master.html
@@ -155,7 +155,105 @@
 
     <!-- Content -->
 
-    <div layout:fragment="content"></div>
+    <div id="content">
+
+
+        <!--  MAIN HERE -->
+
+        <main layout:fragment="content"></main>
+
+        <!--  end MAIN HERE -->
+
+
+        <!-- Footer -->
+        <footer id="footer" class="bg-dark dark">
+
+            <div class="container">
+                <!-- Footer 1st Row -->
+                <div class="footer-first-row row">
+                    <div class="col-lg-3 text-center">
+                        <a href="../"><img src="assets/img/logo-cloud-kitchen.png" alt="" width="88"
+                                           class="mt-5 mb-5"></a>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <h4 class="text-muted">Get Started</h4>
+                        <ul class="list-posts">
+                            <li>
+                                <span><a href="../" class="title text-primary">Home</a></span>
+                            </li>
+                            <li>
+                                <span><a href="../menu" class="title text-primary">Menu</a></span>
+                            </li>
+                            <li>
+                                <span><a href="../restaurant" class="title text-primary">Restaurant</a></span>
+                            </li>
+                            <li>
+                                <span><a href="../about" class="title text-primary">About</a></span>
+                            </li>
+                            <li>
+                                <span><a href="../feedback" class="title text-primary">Feedback</a></span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <h4 class="text-muted">Your Account</h4>
+                        <ul class="list-posts">
+                            <li><span><a href="../account/login" class="title text-primary">Login</a></span></li>
+                            <li><span><a href="../account/register" class="title text-primary">Register</a></span></li>
+                            <li><span><a href="../account/my-order" class="title text-primary">Order history</a></span>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6">
+
+                        <h4 class="text-muted">Contact Us</h4>
+                        <ul class="list-posts">
+                            <li>
+                                <span class="title text-primary">Could Kitchen</span>
+                            </li>
+                            <li>
+                                <span class="title text-primary">8, Ton That Thuyet, My Dinh, Ha Noi</span>
+                            </li>
+                            <li>
+                                <span style="font-variant: lining-nums;"
+                                      class="title text-primary"><strong>Phone: </strong>
+                                    <a href="../contact">+84 868 6633 15</a>
+                                </span>
+                            </li>
+                            <li>
+                                <span class="title text-primary"><strong>Email: </strong>
+                                    <a href="../contact">codedy.dev@gmail.com</a>
+                                </span>
+                            </li>
+
+                        </ul>
+
+                        <a href="../" class="icon icon-social icon-circle icon-sm icon-facebook"><i
+                                class="fa fa-facebook"></i></a>
+                        <a href="../" class="icon icon-social icon-circle icon-sm icon-google"><i
+                                class="fa fa-google"></i></a>
+                        <a href="../" class="icon icon-social icon-circle icon-sm icon-twitter"><i
+                                class="fa fa-twitter"></i></a>
+                        <a href="../" class="icon icon-social icon-circle icon-sm icon-youtube"><i
+                                class="fa fa-youtube"></i></a>
+                        <a href="../" class="icon icon-social icon-circle icon-sm icon-instagram"><i
+                                class="fa fa-instagram"></i></a>
+                    </div>
+                </div>
+                <!-- Footer 2nd Row -->
+                <div class="footer-second-row">
+                    <span class="text-muted">Copyright © Codedy TechWiz 2021</span>
+                </div>
+            </div>
+
+            <!-- Back To Top -->
+            <button id="back-to-top" class="back-to-top"><i class="ti ti-angle-up"></i></button>
+
+        </footer>
+        <!-- Footer / End -->
+
+    </div>
 
     <!-- Content / End -->
 
