UPDATE: Front - Tất cả trang tĩnh

--- a/src/main/resources/templates/front/account/profile/edit.html
+++ b/src/main/resources/templates/front/account/profile/edit.html
@@ -231,29 +231,29 @@
 
                                     <div class="form-group col-sm-6">
                                         <label>First Name:</label>
-                                        <input class="form-control" name="first_name" required
+                                        <input class="form-control" name="first_name"
                                                value="Nguyễn Đình"
                                                required>
                                     </div>
                                     <div class="form-group col-sm-6">
                                         <label>Last Name:</label>
-                                        <input class="form-control" name="last_name" required
+                                        <input class="form-control" name="last_name"
                                                value="Hiếu"
                                                required>
                                     </div>
                                     <div class="form-group col-sm-6">
                                         <label>Phone number:</label>
-                                        <input class="form-control" name="phone" required
+                                        <input class="form-control" name="phone"
                                                value="0868 6633 15" required>
                                     </div>
                                     <div class="form-group col-sm-6">
                                         <label>E-mail address:</label>
-                                        <input class="form-control" name="email" required
+                                        <input class="form-control" name="email"
                                                value="HieuNDTH1908028@fpt.edu.vn" required>
                                     </div>
                                     <div class="form-group col-sm-12">
                                         <label>Address:</label>
-                                        <textarea class="form-control" name="address" required
+                                        <textarea class="form-control" name="address"
                                                   required>8, Ton That Thuyet, Ha Noi, Viet Nam</textarea>
                                     </div>
                                 </div>
