--- a/src/main/resources/templates/dashboard/product/index.html
+++ b/src/main/resources/templates/dashboard/product/index.html
@@ -3,7 +3,8 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{dashboard/layout/master}">
+      layout:decorate="~{dashboard/layout/master}"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <base href="/dashboard/">
@@ -131,8 +132,8 @@
                                                             <i class="fa fa-edit fa-w-20"></i>
                                                         </span>
                                             </a>
-                                            <form class="d-inline"
-                                                  th:action="@{|/admin/product/${product.id}|}" th:method="DELETE">
+                                            <form class="d-inline" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_HOST')"
+                                                  th:action="@{|/admin/product/${product.id}|}" th:method="DELETE" >
                                                 <button class="btn btn-hover-shine btn-outline-danger border-0 btn-sm"
                                                     onclick="return confirm('Do you really want to delete this item?')">
                                                         <span class="btn-icon-wrapper opacity-8">
