--- a/src/main/resources/templates/front/account/login.html
+++ b/src/main/resources/templates/front/account/login.html
@@ -40,11 +40,18 @@
                             <div class="example-box-content">
                                 <form th:action="@{/account/login}" method="post">
 
+                                    <!-- Check for login error -->
                                     <div th:if="${param.error}">
-                                        Invalid username and password.
+                                        <div class="alert alert-danger col-xs-offset-1 col-xs-10">
+                                            Invalid username and password.
+                                        </div>
                                     </div>
+
+                                    <!-- Check for logout -->
                                     <div th:if="${param.logout}">
-                                        You have been logged out.
+                                        <div class="alert alert-success col-xs-offset-1 col-xs-10">
+                                            You have been logged out.
+                                        </div>
                                     </div>
 
                                     <div class="row">
