UPDATE: spring security

--- a/src/main/resources/templates/front/account/access-denied.html
+++ b/src/main/resources/templates/front/account/access-denied.html
@@ -11,10 +11,9 @@
 <hr>
 
 <div>
-    User: <span sec:authentication="name"></span>
+    Logged user: <span sec:authentication="name"></span>
     <br>
-    Role(s): <span sec:authentication="principal.authorities"></span>
-    <br>
+    Roles: <span sec:authentication="principal.authorities"></span>
 </div>
 
 <hr>
