NEW: view - show

--- a/src/main/resources/templates/dashboard/product/show.html
+++ b/src/main/resources/templates/dashboard/product/show.html
@@ -6,27 +6,9 @@
       layout:decorate="~{dashboard/layout/master}">
 
 <head>
-    <base href="/dashboard/">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="Content-Language" content="en">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    
     <title>Dashboard</title>
 
-    <!-- Favicons -->
-    <link rel="shortcut icon" href="../favicon-admin.png">
-
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"/>
-    <meta name="description" content="CODEDY @ Cloud Kitchen - TechWiz 2021">
-
-    <!-- Disable tap highlight on IE -->
-    <meta name="msapplication-tap-highlight" content="no">
-
-    <link href="tailwind.min.css" rel="stylesheet">
-
-    <link href="main.css" rel="stylesheet">
-    <link href="my_style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -79,18 +61,19 @@
                         <div class="main-card mb-3 card">
                             <div class="card-body display_data">
                                 <div class="position-relative row form-group">
-                                    <label for="" class="col-md-3 text-md-right col-form-label">Image</label>
+                                    <label class="col-md-3 text-md-right col-form-label">Image</label>
                                     <div class="col-md-9 col-xl-8">
                                         <p>
                                             <img style="height: 200px;" class="" data-toggle="tooltip"
                                                  title="Avatar" data-placement="bottom"
-                                                 th:src="@{|../front/data-images/products/${product.image}|}" alt="Avatar">
+                                                 th:src="@{|../front/data-images/products/${product.image}|}"
+                                                 alt="product.image">
                                         </p>
                                     </div>
                                 </div>
 
                                 <div class="position-relative row form-group">
-                                    <label for="" class="col-md-3 text-md-right col-form-label">
+                                    <label class="col-md-3 text-md-right col-form-label">
                                         Name
                                     </label>
                                     <div class="col-md-9 col-xl-8">
@@ -99,7 +82,7 @@
                                 </div>
 
                                 <div class="position-relative row form-group">
-                                    <label for="" class="col-md-3 text-md-right col-form-label">
+                                    <label class="col-md-3 text-md-right col-form-label">
                                         Category
                                     </label>
                                     <div class="col-md-9 col-xl-8">
@@ -107,14 +90,14 @@
                                     </div>
                                 </div>
                                 <div class="position-relative row form-group">
-                                    <label for="" class="col-md-3 text-md-right col-form-label">Restaurant</label>
+                                    <label class="col-md-3 text-md-right col-form-label">Restaurant</label>
                                     <div class="col-md-9 col-xl-8">
                                         <p th:text="${product.restaurant.name}"></p>
                                     </div>
                                 </div>
 
                                 <div class="position-relative row form-group">
-                                    <label for=""
+                                    <label 
                                            class="col-md-3 text-md-right col-form-label">Price</label>
                                     <div class="col-md-9 col-xl-8">
                                         <p th:text="${product.price}"></p>
@@ -122,7 +105,7 @@
                                 </div>
 
                                 <div class="position-relative row form-group">
-                                    <label for=""
+                                    <label 
                                            class="col-md-3 text-md-right col-form-label">Ingredients</label>
                                     <div class="col-md-9 col-xl-8">
                                         <p th:text="${product.ingredients}"></p>
@@ -131,7 +114,7 @@
 
 
                                 <div class="position-relative row form-group">
-                                    <label for=""
+                                    <label 
                                            class="col-md-3 text-md-right col-form-label">Country</label>
                                     <div class="col-md-9 col-xl-8">
                                         <p th:text="${product.country}"></p>
@@ -139,7 +122,7 @@
                                 </div>
 
                                 <div class="position-relative row form-group">
-                                    <label for="" class="col-md-3 text-md-right col-form-label">
+                                    <label class="col-md-3 text-md-right col-form-label">
                                         Description</label>
                                     <div class="col-md-9 col-xl-8" th:utext="${product.description}">[(${product.description})]</div>
                                 </div>
