--- a/src/main/resources/templates/dashboard/restaurant/show.html
+++ b/src/main/resources/templates/dashboard/restaurant/show.html
@@ -1,238 +1,20 @@
-
 <!doctype html>
-<html lang="en">
+
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{dashboard/layout/master}">
 
 <head>
-    <base href="/dashboard/">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="Content-Language" content="en">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>Restaurant | Admin - Cloud Kitchen - TechWiz 2021 @ CODEDY</title>
 
-    <!-- Favicons -->
-    <link rel="shortcut icon" href="../favicon-admin.png">
+    <title>Restaurant</title>
 
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"/>
-    <meta name="description" content="CODEDY @ Cloud Kitchen - TechWiz 2021">
-
-    <!-- Disable tap highlight on IE -->
-    <meta name="msapplication-tap-highlight" content="no">
-
-    <link href="tailwind.min.css" rel="stylesheet">
-
-    <link href="main.css" rel="stylesheet">
-    <link href="my_style.css" rel="stylesheet">
 </head>
 
 <body>
-<div class="app-container app-theme-white body-tabs-shadow fixed-header fixed-sidebar">
-    <div class="app-header header-shadow">
-        <div class="app-header__logo">
-            <div class="logo-src"></div>
-            <div class="header__pane ml-auto">
-                <div>
-                    <button type="button" class="hamburger close-sidebar-btn hamburger--elastic"
-                            data-class="closed-sidebar">
-                            <span class="hamburger-box">
-                                <span class="hamburger-inner"></span>
-                            </span>
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="app-header__mobile-menu">
-            <div>
-                <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
-                        <span class="hamburger-box">
-                            <span class="hamburger-inner"></span>
-                        </span>
-                </button>
-            </div>
-        </div>
-        <div class="app-header__menu">
-                <span>
-                    <button type="button"
-                            class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-                        <span class="btn-icon-wrapper">
-                            <i class="fa fa-ellipsis-v fa-w-6"></i>
-                        </span>
-                    </button>
-                </span>
-        </div>
-        <div class="app-header__content">
-            <div class="app-header-right">
-                <div class="header-btn-lg pr-0">
-                    <div class="widget-content p-0">
-                        <div class="widget-content-wrapper">
-                            <div class="widget-content-left">
-                                <div class="btn-group">
-                                    <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                                       class="p-0 btn">
-                                        <img width="42" class="rounded-circle"
-                                             src="../front/data-images/user/admin.jpg"
-                                             alt="">
-                                        <i class="fa fa-angle-down ml-2 opacity-8"></i>
-                                    </a>
-                                    <div tabindex="-1" role="menu" aria-hidden="true"
-                                         class="rm-pointers dropdown-menu-lg dropdown-menu dropdown-menu-right">
-                                        <div class="dropdown-menu-header">
-                                            <div class="dropdown-menu-header-inner bg-info">
-                                                <div class="menu-header-image opacity-2"
-                                                     style="background-image: url('../dashboard/assets/images/dropdown-header/city3.jpg');">
-                                                </div>
-                                                <div class="menu-header-content text-left">
-                                                    <div class="widget-content p-0">
-                                                        <div class="widget-content-wrapper">
-                                                            <div class="widget-content-left mr-3">
-                                                                <img width="42" class="rounded-circle"
-                                                                     src="../front/data-images/user/admin.jpg"
-                                                                     alt="">
-                                                            </div>
-                                                            <div class="widget-content-left">
-                                                                <div
-                                                                        class="widget-heading">Admin</div>
-                                                                <div class="widget-subheading opacity-8">
-
-                                                                </div>
-                                                            </div>
-                                                            <div class="widget-content-right mr-2">
-                                                                <a href="../admin/logout"
-                                                                   class="btn-pill btn-shadow btn-shine btn btn-focus">
-                                                                    Logout
-                                                                </a>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="widget-content-left  ml-3 header-user-info">
-                                <div class="widget-heading">Admin</div>
-                                <div class="widget-subheading">
-                                    System administrator account
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="app-main">
-        <div class="app-sidebar sidebar-shadow">
-            <div class="app-header__logo">
-                <div class="logo-src"></div>
-                <div class="header__pane ml-auto">
-                    <div>
-                        <button type="button" class="hamburger close-sidebar-btn hamburger--elastic"
-                                data-class="closed-sidebar">
-                                <span class="hamburger-box">
-                                    <span class="hamburger-inner"></span>
-                                </span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="app-header__mobile-menu">
-                <div>
-                    <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
-                            <span class="hamburger-box">
-                                <span class="hamburger-inner"></span>
-                            </span>
-                    </button>
-                </div>
-            </div>
-            <div class="app-header__menu">
-                    <span>
-                        <button type="button"
-                                class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-                            <span class="btn-icon-wrapper">
-                                <i class="fa fa-ellipsis-v fa-w-6"></i>
-                            </span>
-                        </button>
-                    </span>
-            </div>
-            <div class="scrollbar-sidebar">
-                <div class="app-sidebar__inner">
-
-                    <ul class="vertical-nav-menu pt-3">
-                        <li>
-                            <a href="../admin"
-                               class="">
-                                <i class="metismenu-icon pe-7s-rocket"></i>
-                                Dashboard
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/report"
-                               class="">
-                                <i class="metismenu-icon pe-7s-display2"></i>
-                                Report
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/feedback"
-                               class="">
-                                <i class="metismenu-icon pe-7s-light"></i>
-                                Feedback
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/order"
-                               class="">
-                                <i class="metismenu-icon pe-7s-shopbag"></i>
-                                Order
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/product"
-                               class="">
-                                <i class="metismenu-icon pe-7s-plugin"></i>
-                                Product
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/category"
-                               class="">
-                                <i class="metismenu-icon pe-7s-ticket"></i>
-                                Category
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/restaurant"
-                               class="mm-active">
-                                <i class="metismenu-icon pe-7s-map-2"></i>
-                                Restaurant
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/user"
-                               class="">
-                                <i class="metismenu-icon pe-7s-users"></i>
-                                User
-                            </a>
-                        </li>
-                    </ul>
-
-                </div>
-            </div>
-        </div>
-
-        <div class="app-main__outer">
-
-
-            <!--  MAIN HERE -->
-
 
             <!-- Main -->
-            <div class="app-main__inner">
+            <div layout:fragment="content" class="app-main__inner">
                 <div class="app-page-title">
                     <div class="page-title-wrapper">
                         <div class="page-title-heading">
@@ -251,9 +33,8 @@
                 </div>
 
                 <ul class="body-tabs body-tabs-layout tabs-animated body-tabs-animated nav">
-
                     <li class="nav-item">
-                        <a href="http://127.0.0.1:8000/admin/restaurant/1/edit" class="nav-link">
+                        <a th:href="@{|/admin/restaurant/${restaurant.id}/edit|}" class="nav-link">
                                 <span class="btn-icon-wrapper pr-2 opacity-8">
                                     <i class="fa fa-edit fa-w-20"></i>
                                 </span>
@@ -261,21 +42,18 @@
                         </a>
                     </li>
 
-
                     <li class="nav-item delete">
-                        <form action="http://127.0.0.1:8000/admin/restaurant/1/" method="post">
-                            <input type="hidden" name="_token" value="j4grsT51wFZcNdSwswHF0Bkgqk8S5EAtwu5TUt3g">                        <input type="hidden" name="_method" value="DELETE">                        <button class="nav-link btn" type="submit"
-                                                                                                                                                                                                                           onclick="return confirm('Do you really want to delete this item?')">
-                    <span class="btn-icon-wrapper pr-2 opacity-8">
-                        <i class="fa fa-trash fa-w-20"></i>
-                    </span>
-                            <span>Delete</span>
-                        </button>
+                        <form class="d-inline"
+                              th:action="@{|/admin/restaurant/${restaurant.id}|}" th:method="DELETE">
+                            <button class="btn nav-link"
+                                    onclick="return confirm('Do you really want to delete this item?')">
+                                <span class="btn-icon-wrapper opacity-8">
+                                    <i class="fa fa-trash fa-w-20"></i>
+                                </span>
+                                <span class="ml-1"> Delete</span>
+                            </button>
                         </form>
                     </li>
-
-
-
                 </ul>
 
                 <div class="row">
@@ -283,39 +61,38 @@
                         <div class="main-card mb-3 card">
                             <div class="card-body display_data">
                                 <div class="position-relative row form-group">
-                                    <label for="image" class="col-md-3 text-md-right col-form-label">Avatar</label>
+                                    <label class="col-md-3 text-md-right col-form-label">Avatar</label>
                                     <div class="col-md-9 col-xl-8">
                                         <p>
                                             <img style="height: 200px;" data-toggle="tooltip"
                                                  title="Avatar" data-placement="bottom"
-                                                 src="../front/data-images/restaurants/EssenceRestaurant.PNG" alt="Avatar">
+                                                 th:src="@{|../front/data-images/restaurants/${restaurant.image}|}"
+                                                 alt="Avatar">
                                         </p>
                                     </div>
                                 </div>
 
                                 <div class="position-relative row form-group">
-                                    <label for="name" class="col-md-3 text-md-right col-form-label">
+                                    <label class="col-md-3 text-md-right col-form-label">
                                         Name
                                     </label>
                                     <div class="col-md-9 col-xl-8">
-                                        <p>Essence Restaurant</p>
+                                        <p th:text="${restaurant.name}"></p>
                                     </div>
                                 </div>
 
                                 <div class="position-relative row form-group">
-                                    <label for="email" class="col-md-3 text-md-right col-form-label">Address</label>
+                                    <label class="col-md-3 text-md-right col-form-label">Address</label>
                                     <div class="col-md-9 col-xl-8">
-                                        <p>154 East 79th Street, Manhattan New York, USA</p>
+                                        <p th:text="${restaurant.address}"></p>
                                     </div>
                                 </div>
 
                                 <div class="position-relative row form-group">
-                                    <label for="company_name" class="col-md-3 text-md-right col-form-label">
+                                    <label class="col-md-3 text-md-right col-form-label">
                                         Description
                                     </label>
-                                    <div class="col-md-9 col-xl-8">
-                                        <p>With an extensive drink menu including fresh fruit shakes, coffee, cocktails and wines, the restaurant guarantees a nutritious meal with delicious food, great service in the right space and brandy , all with the most affordable prices in town.</p>
-                                    </div>
+                                    <div class="col-md-9 col-xl-8" th:utext="${restaurant.description}"></div>
                                 </div>
                             </div>
                         </div>
@@ -324,20 +101,6 @@
             </div>
             <!-- End Main -->
 
-
-            <!--  end MAIN HERE -->
-
-        </div>
-    </div>
-
-</div>
-<div class="app-drawer-overlay d-none animated fadeIn"></div>
-
-<script src="../dashboard/assets/scripts/jquery-3.2.1.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-<script type="text/javascript" src="../dashboard/assets/scripts/main.js"></script>
-<script type="text/javascript" src="../dashboard/assets/scripts/my_script.js"></script>
 </body>
 
 </html>
