--- a/src/main/resources/templates/dashboard/category/create-edit.html
+++ b/src/main/resources/templates/dashboard/category/create-edit.html
@@ -1,241 +1,19 @@
-
 <!doctype html>
-<html lang="en">
+
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{dashboard/layout/master}">
 
 <head>
-    <base href="/dashboard/">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="Content-Language" content="en">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>Category | Admin - Cloud Kitchen - TechWiz 2021 @ CODEDY</title>
 
-    <!-- Favicons -->
-    <link rel="shortcut icon" href="../favicon-admin.png">
+    <title>Category</title>
 
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"/>
-    <meta name="description" content="CODEDY @ Cloud Kitchen - TechWiz 2021">
-
-    <!-- Disable tap highlight on IE -->
-    <meta name="msapplication-tap-highlight" content="no">
-
-    <link href="tailwind.min.css" rel="stylesheet">
-
-    <link href="main.css" rel="stylesheet">
-    <link href="my_style.css" rel="stylesheet">
 </head>
 
 <body>
-<div class="app-container app-theme-white body-tabs-shadow fixed-header fixed-sidebar">
-    <div class="app-header header-shadow">
-        <div class="app-header__logo">
-            <div class="logo-src"></div>
-            <div class="header__pane ml-auto">
-                <div>
-                    <button type="button" class="hamburger close-sidebar-btn hamburger--elastic"
-                            data-class="closed-sidebar">
-                            <span class="hamburger-box">
-                                <span class="hamburger-inner"></span>
-                            </span>
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="app-header__mobile-menu">
-            <div>
-                <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
-                        <span class="hamburger-box">
-                            <span class="hamburger-inner"></span>
-                        </span>
-                </button>
-            </div>
-        </div>
-        <div class="app-header__menu">
-                <span>
-                    <button type="button"
-                            class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-                        <span class="btn-icon-wrapper">
-                            <i class="fa fa-ellipsis-v fa-w-6"></i>
-                        </span>
-                    </button>
-                </span>
-        </div>
-        <div class="app-header__content">
-            <div class="app-header-right">
-                <div class="header-btn-lg pr-0">
-                    <div class="widget-content p-0">
-                        <div class="widget-content-wrapper">
-                            <div class="widget-content-left">
-                                <div class="btn-group">
-                                    <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                                       class="p-0 btn">
-                                        <img width="42" class="rounded-circle"
-                                             src="../front/data-images/user/staff_a.jpg"
-                                             alt="">
-                                        <i class="fa fa-angle-down ml-2 opacity-8"></i>
-                                    </a>
-                                    <div tabindex="-1" role="menu" aria-hidden="true"
-                                         class="rm-pointers dropdown-menu-lg dropdown-menu dropdown-menu-right">
-                                        <div class="dropdown-menu-header">
-                                            <div class="dropdown-menu-header-inner bg-info">
-                                                <div class="menu-header-image opacity-2"
-                                                     style="background-image: url('../dashboard/assets/images/dropdown-header/city3.jpg');">
-                                                </div>
-                                                <div class="menu-header-content text-left">
-                                                    <div class="widget-content p-0">
-                                                        <div class="widget-content-wrapper">
-                                                            <div class="widget-content-left mr-3">
-                                                                <img width="42" class="rounded-circle"
-                                                                     src="../front/data-images/user/staff_a.jpg"
-                                                                     alt="">
-                                                            </div>
-                                                            <div class="widget-content-left">
-                                                                <div
-                                                                        class="widget-heading">Staff_A</div>
-                                                                <div class="widget-subheading opacity-8">
-                                                                    Essence Restaurant
-                                                                </div>
-                                                            </div>
-                                                            <div class="widget-content-right mr-2">
-                                                                <a href="../admin/logout"
-                                                                   class="btn-pill btn-shadow btn-shine btn btn-focus">
-                                                                    Logout
-                                                                </a>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="widget-content-left  ml-3 header-user-info">
-                                <div class="widget-heading">Staff_A</div>
-                                <div class="widget-subheading">
-                                    Staff of:
-                                    <span class="font-weight-bold">
-                                        Essence Restaurant
-                                    </span>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="app-main">
-        <div class="app-sidebar sidebar-shadow">
-            <div class="app-header__logo">
-                <div class="logo-src"></div>
-                <div class="header__pane ml-auto">
-                    <div>
-                        <button type="button" class="hamburger close-sidebar-btn hamburger--elastic"
-                                data-class="closed-sidebar">
-                                <span class="hamburger-box">
-                                    <span class="hamburger-inner"></span>
-                                </span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="app-header__mobile-menu">
-                <div>
-                    <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
-                            <span class="hamburger-box">
-                                <span class="hamburger-inner"></span>
-                            </span>
-                    </button>
-                </div>
-            </div>
-            <div class="app-header__menu">
-                    <span>
-                        <button type="button"
-                                class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-                            <span class="btn-icon-wrapper">
-                                <i class="fa fa-ellipsis-v fa-w-6"></i>
-                            </span>
-                        </button>
-                    </span>
-            </div>
-            <div class="scrollbar-sidebar">
-                <div class="app-sidebar__inner">
-
-                    <ul class="vertical-nav-menu pt-3">
-                        <li>
-                            <a href="../admin"
-                               class="">
-                                <i class="metismenu-icon pe-7s-rocket"></i>
-                                Dashboard
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/report"
-                               class="">
-                                <i class="metismenu-icon pe-7s-display2"></i>
-                                Report
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/feedback"
-                               class="">
-                                <i class="metismenu-icon pe-7s-light"></i>
-                                Feedback
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/order"
-                               class="">
-                                <i class="metismenu-icon pe-7s-shopbag"></i>
-                                Order
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/product"
-                               class="">
-                                <i class="metismenu-icon pe-7s-plugin"></i>
-                                Product
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/category"
-                               class="mm-active">
-                                <i class="metismenu-icon pe-7s-ticket"></i>
-                                Category
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/restaurant"
-                               class="">
-                                <i class="metismenu-icon pe-7s-map-2"></i>
-                                Restaurant
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/user"
-                               class="">
-                                <i class="metismenu-icon pe-7s-users"></i>
-                                User
-                            </a>
-                        </li>
-                    </ul>
-
-                </div>
-            </div>
-        </div>
-
-        <div class="app-main__outer">
-
-
-            <!--  MAIN HERE -->
-
-
             <!-- Main -->
-            <div class="app-main__inner">
+            <div layout:fragment="content" class="app-main__inner">
 
                 <div class="app-page-title">
                     <div class="page-title-wrapper">
@@ -258,36 +36,39 @@
                         <div class="main-card mb-3 card">
                             <div class="card-body">
 
-                                <form method="post"
-                                      action="../admin/category/1"
-                                      enctype="multipart/form-data">
-                                    <input type="hidden" name="_token" value="j4grsT51wFZcNdSwswHF0Bkgqk8S5EAtwu5TUt3g">
-                                    <input type="hidden" name="_method" value="put">
+                                <form method="post" enctype="multipart/form-data"
+                                      th:action="${#request.requestURI.endsWith('/create')} ? @{|/admin/category/create|} : @{|/admin/category/${productCategory.id}/edit|}"
+                                      th:object="${productCategory}">
+
+                                    <input type="hidden" th:field="*{id}">
+                                    <input type="hidden" th:field="*{image}">
 
                                     <div class="position-relative row form-group">
-                                        <label for="image"
-                                               class="col-md-3 text-md-right col-form-label">Image</label>
+                                        <label class="col-md-3 text-md-right col-form-label">Image</label>
                                         <div class="col-md-9 col-xl-8">
                                             <img style="height: 200px; cursor: pointer;"
                                                  class="thumbnail " data-toggle="tooltip"
                                                  title="Click to change the image" data-placement="bottom"
-                                                 src="../front/data-images/categories/Vegetarian.jpg"
+                                                 th:src="${productCategory.image != null && productCategory.image != ''} ? @{|../front/data-images/categories/${productCategory.image}|} : @{|../dashboard/assets/images/add-image-icon.jpg|}"
                                                  alt="Category-image">
-                                            <input name="image" type="file" onchange="changeImg(this)"
+                                            <input name="image_file" type="file" onchange="changeImg(this)" accept="image/*"
                                                    class="image form-control-file" style="display: none;"
                                                    value="Vegetarian.jpg">
-                                            <input type="hidden" name="image_old" value="Vegetarian.jpg">
+                                            <input type="hidden" name="image_old" th:value="${productCategory.image}">
                                             <small class="form-text text-muted">
                                                 No images, upload them! (Click on the image to change)
                                             </small>
+
+                                            <div th:if="${#fields.hasErrors('image')}" th:errors="*{image}" class="invalid-feedback d-inline-block"></div>
                                         </div>
                                     </div>
 
                                     <div class="position-relative row form-group">
                                         <label for="name" class="col-md-3 text-md-right col-form-label">Name</label>
                                         <div class="col-md-9 col-xl-8">
-                                            <input required name="name" id="name" placeholder="Name" type="text"
-                                                   class="form-control" value="Vegetarian">
+                                            <input th:field="*{name}" required name="name" id="name" placeholder="Name" type="text"
+                                                   class="form-control">
+                                            <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="invalid-feedback d-inline-block"></div>
                                         </div>
                                     </div>
 
@@ -295,11 +76,12 @@
                                         <label for="active" class="col-md-3 text-md-right col-form-label">Status</label>
                                         <div class="col-md-9 col-xl-8">
                                             <div class="position-relative form-check pt-sm-2">
-                                                <input name="active" id="active" type="checkbox" value=1
+                                                <input th:field="*{active}" name="active" id="active" type="checkbox" value=1
                                                        checked
                                                        class="form-check-input">
                                                 <label for="active" class="form-check-label">Active</label>
                                             </div>
+                                            <div th:if="${#fields.hasErrors('active')}" th:errors="*{active}" class="invalid-feedback d-inline-block"></div>
                                         </div>
                                     </div>
 
@@ -329,20 +111,6 @@
             </div>
             <!-- End Main -->
 
-
-            <!--  end MAIN HERE -->
-
-        </div>
-    </div>
-
-</div>
-<div class="app-drawer-overlay d-none animated fadeIn"></div>
-
-<script src="../dashboard/assets/scripts/jquery-3.2.1.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-<script type="text/javascript" src="../dashboard/assets/scripts/main.js"></script>
-<script type="text/javascript" src="../dashboard/assets/scripts/my_script.js"></script>
 </body>
 
 </html>
