--- a/src/main/resources/templates/dashboard/user/show.html
+++ b/src/main/resources/templates/dashboard/user/show.html
@@ -106,14 +106,14 @@
                                 <div class="position-relative row form-group">
                                     <label class="col-md-3 text-md-right col-form-label">First Name</label>
                                     <div class="col-md-9 col-xl-8">
-                                        <p th:text="${user.first_name}"></p>
+                                        <p th:text="${user.firstName}"></p>
                                     </div>
                                 </div>
 
                                 <div class="position-relative row form-group">
                                     <label class="col-md-3 text-md-right col-form-label">Last Name</label>
                                     <div class="col-md-9 col-xl-8">
-                                        <p th:text="${user.last_name}"></p>
+                                        <p th:text="${user.lastName}"></p>
                                     </div>
                                 </div>
 
